Fix Vercel routing configuration and 404 errors
- Update vercel.json to use proper rewrites syntax
- Remove conflicting routes configuration
- Fix PWA redirect paths to use absolute URLs
- Add index page start button for manual navigation
- Update service worker cache to include index.html
- Improve routing for property_select, room_select, meter_reading paths

--- a/vercel.json
+++ b/vercel.json
@@ -4,22 +4,25 @@
   "installCommand": null,
   "outputDirectory": null,
   "public": true,
+  "functions": {},
+  "cleanUrls": true,
+  "trailingSlash": false,
   "rewrites": [
-    {
-      "source": "/",
-      "destination": "/index.html"
-    },
     {
       "source": "/property_select",
       "destination": "/html_files/main_app/property_select.html"
     },
     {
-      "source": "/room_select",
+      "source": "/room_select", 
       "destination": "/html_files/main_app/room_select.html"
     },
     {
       "source": "/meter_reading",
       "destination": "/html_files/main_app/meter_reading.html"
+    },
+    {
+      "source": "/((?!css_styles|csv|gas_scripts|html_files|manifest\\.json|service-worker\\.js|pwa-utils\\.js|.*\\.).*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
